Fix overflow between project title and user status header

--- a/src/RX.Nyss.Web/ClientApp/src/components/layout/UserStatus.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/layout/UserStatus.module.scss
@@ -2,10 +2,7 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-    position: absolute;
-    right: 35px;
-    top: 20px;
-
+    margin-top: 20px;
     .userName {
       margin-right: 5px;
     }
